[project]
name = "media-mcp"
version = "1.0.0"
description = "FastMCP server for local AI media generation"
requires-python = ">=3.11"
dependencies = [
    "fastmcp",
    "httpx",
    "python-dotenv",
    "pillow",
]

[project.scripts]
media-mcp = "media_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["media_mcp"]
